Revise Python frontend
