# openapi.yaml
@@ -1,114 +1,243 @@
 openapi: 3.1.0
 info:
-  title: WikiDice
-  description: Get a random Wikipedia article under a category
-  summary: Wikipedia random article generator by recursive category traversal
-  version: 1.0.0
   contact:
-    name: Zelly Snyder
     email: zelcon@zelcon.net
+    name: Zelly Snyder
+  description: Get a random Wikipedia article under a category
   license:
     name: Apache-2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.txt
+  title: WikiDice
+  version: 1.0.0
 servers:
-  - url: https://wikidice.zelcon.net/api/
-    description: Production server
+- description: Production server
+  url: https://wikidice.zelcon.net/api/
 paths:
   /random/{category}:
     get:
-      summary: Get a random article
       description: Get a random article from Wikipedia under a category
-      operationId: getRandomArticle
+      operationId: get_random_article
       parameters:
-        - name: category
-          in: path
-          description: Category to search under (recursively, including subcategories)
-          required: true
-          allowEmptyValue: false
-          schema:
-            type: string
-        - name: language
-          in: query
-          description: |
-            Wikipedia language name such as "en", "de", etc. For examples, see:
-            https://en.wikipedia.org/wiki/List_of_Wikipedias
-          required: false
-          allowEmptyValue: false
-          schema:
-            type: string
-            default: en
+      - description: "Category to search under (recursively, including subcategories)"
+        explode: false
+        in: path
+        name: category
+        required: true
+        schema:
+          type: string
+        style: simple
+      - description: |
+          Maximum depth (recursive subcategories) to search for articles
+        explode: true
+        in: query
+        name: depth
+        required: false
+        schema:
+          default: 5
+          maximum: 100
+          minimum: 0
+          type: integer
+        style: form
+      - allowEmptyValue: false
+        description: |
+          Wikipedia language name such as "en", "de", etc. For examples, see:
+          https://en.wikipedia.org/wiki/List_of_Wikipedias
+        explode: true
+        in: query
+        name: language
+        required: false
+        schema:
+          default: en
+          type: string
+        style: form
       responses:
-        '302':
+        "302":
           description: Found
           headers:
             Location:
               description: Redirect location
+              explode: false
               schema:
                 type: string
-        '400':
+              style: simple
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
           description: Bad Request
+        "404":
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-        '500':
+          description: Not Found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
           description: Internal Server Error
+      summary: Pick a random article under a category
+  /random_with_derivation/{category}:
+    get:
+      description: |
+        Get a random article from Wikipedia under a category, but also return
+        the category path that was traversed to get to the article.
+      operationId: get_random_article_with_derivation
+      parameters:
+      - description: "Category to search under (recursively, including subcategories)"
+        explode: false
+        in: path
+        name: category
+        required: true
+        schema:
+          type: string
+        style: simple
+      - description: |
+          Maximum depth (recursive subcategories) to search for articles
+        explode: true
+        in: query
+        name: depth
+        required: false
+        schema:
+          default: 5
+          maximum: 100
+          minimum: 0
+          type: integer
+        style: form
+      - allowEmptyValue: false
+        description: |
+          Wikipedia language name such as "en", "de", etc. For examples, see:
+          https://en.wikipedia.org/wiki/List_of_Wikipedias
+        explode: true
+        in: query
+        name: language
+        required: false
+        schema:
+          default: en
+          type: string
+        style: form
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RandomArticleWithDerivation'
+          description: OK
+        "404":
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+          description: Not Found
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Bad Request
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Internal Server Error
+      summary: "Get a random article, but with details"
   /autocomplete:
     get:
-      summary: Autocompletion search for category names
       description: Prefix search for categories
-      operationId: categoryAutocomplete
+      operationId: category_autocomplete
       parameters:
-        - name: prefix
-          in: query
-          description: Prefix to search for
-          required: true
-          schema:
-            type: string
-        - name: language
-          in: query
-          description: |
-            Wikipedia language name such as "en", "de", etc. For examples, see:
-            https://en.wikipedia.org/wiki/List_of_Wikipedias
-          required: false
-          allowEmptyValue: false
-          schema:
-            type: string
-            default: en
+      - description: Prefix to search for
+        explode: true
+        in: query
+        name: prefix
+        required: true
+        schema:
+          type: string
+        style: form
+      - allowEmptyValue: false
+        description: |
+          Wikipedia language name such as "en", "de", etc. For examples, see:
+          https://en.wikipedia.org/wiki/List_of_Wikipedias
+        explode: true
+        in: query
+        name: language
+        required: false
+        schema:
+          default: en
+          type: string
+        style: form
+      - description: |
+          Maximum number of results to return
+        explode: true
+        in: query
+        name: limit
+        required: false
+        schema:
+          default: 10
+          maximum: 100
+          minimum: 1
+          type: integer
+        style: form
       responses:
-        '200':
-          description: OK
+        "200":
           content:
             application/json:
               schema:
-                type: array
                 items:
                   type: string
-        '400':
+                type: array
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
           description: Bad Request
+        "500":
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-        '500':
           description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
+      summary: Autocompletion search for category names
 components:
   schemas:
     Error:
-      type: object
       properties:
         error:
-          type: string
           description: Error message
-        internal_code:
+          example: Category not found
+          title: error
           type: string
+        internal_code:
           description: Internal error code
+          example: "404"
+          title: internal_code
+          type: string
           nullable: true
+      title: Error
+    RandomArticleWithDerivation:
+      example:
+        derivation:
+        - Physics
+        - Concepts in physics
+        article: 1294378
+      properties:
+        article:
+          description: Page ID
+          title: article
+          type: integer
+        derivation:
+          description: |
+            Derivation path to article (which categories were traversed to find
+            it)
+          example:
+          - Physics
+          - Concepts in physics
+          items:
+            type: string
+          type: array
+      title: RandomArticleWithDerivation
